# imgui

backends/: imgui_impl_wgpu.cpp  imgui_impl_wgpu.h
examples/example_glfw_wgpu/: main.cpp  make-wgsl.bat  make.bat  makedev.bat
examples/example_glfw_wgpu/glfw3/: api.h  demo.c  glob.c
examples/example_glfw_wgpu/shaders/: frag.spv  frag.wgsl  frag_spv  vert.spv  vert.wgsl  vert_spv
examples/example_glfw_wgpu/shaders/wgslc/: CMakeLists.txt  main.cpp
examples/example_glfw_wgpu/simple_wgsl/: CMakeLists.txt  README.md  TECHNICAL.md  TUTORIAL.md  glsl_parser.c  msl_parser.c  simple_wgsl.h  spirv_to_ssir.c  ssir.c  ssir_to_glsl.c  ssir_to_hlsl.c  ssir_to_msl.c  ssir_to_spirv.c  ssir_to_wgsl.c  wgsl_lower.c  wgsl_parser.c  wgsl_raise.c  wgsl_resolve.c
examples/example_glfw_wgpu/simple_wgsl/example/: example.c  make.bat  metal_compute.m  metal_triangle.m  msl_roundtrip.m  test_msl_parse.c
examples/example_glfw_wgpu/simple_wgsl/glsl/: compute_basic.glsl
examples/example_glfw_wgpu/simple_wgsl/tests/: CMakeLists.txt  egl_compute_harness.cpp  egl_compute_harness.h  egl_compute_test.cpp  egl_graphics_test.cpp  expression_test.cpp  glsl_parser_test.cpp  glsl_raise_test.cpp  integration_test.cpp  lower_test.cpp  msl_parser_test.cpp  parser_test.cpp  raise_test.cpp  resolver_test.cpp  spirv_to_ssir_test.cpp  ssir_raise_test.cpp  ssir_to_hlsl_test.cpp  ssir_to_msl_test.cpp  test_utils.h  vulkan_compute_harness.cpp  vulkan_compute_harness.h  vulkan_compute_test.cpp  vulkan_graphics_complex_test.cpp  vulkan_graphics_harness.cpp  vulkan_graphics_harness.h  vulkan_graphics_scene_test.cpp  vulkan_graphics_test.cpp
examples/example_glfw_wgpu/simple_wgsl/wgsl/: compute_basic.wgsl  compute_minimal.wgsl  transitive_vertex.wgsl  vertex_fragment.wgsl
examples/example_glfw_wgpu/wgvk/examples/: make.bat
examples/example_glfw_wgpu/wgvk/include/: wgvk_structs_impl.h
examples/example_glfw_wgpu/wgvk/src/: wgvk.c
examples/example_sdl2_wgpu/: main.cpp  make.bat  makedev.bat
examples/example_sdl3_wgpu/: main.cpp  make.bat
